[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/MenuButtonSoundPlayer.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Root.gd" type="Script" id=2]
[ext_resource path="res://Scenes/DeleteScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/CreditsScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/Sounds/MenuButton.ogg" type="AudioStream" id=5]
[ext_resource path="res://Scenes/StartMenuScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/MenuScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://Resources/Music/Start Menu.mp3" type="AudioStream" id=8]
[ext_resource path="res://Scenes/ChapterScreen.tscn" type="PackedScene" id=9]
[ext_resource path="res://Resources/Sounds/MenuButtonBack.ogg" type="AudioStream" id=10]
[ext_resource path="res://Scripts/MenuButtonBackSoundPlayer.gd" type="Script" id=11]
[ext_resource path="res://Scenes/EndCreditsScreen.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/OptionsScreen.tscn" type="PackedScene" id=15]

[node name="Root" type="Node2D"]
pause_mode = 2
scale = Vector2( 1.00172, 0.998806 )
script = ExtResource( 2 )

[node name="MenuScreenLayer" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 2

[node name="MenuScreen" parent="MenuScreenLayer" instance=ExtResource( 7 )]
pause_mode = 2
visible = false

[node name="StartMenuScreen" parent="MenuScreenLayer" instance=ExtResource( 6 )]
pause_mode = 2
visible = false

[node name="OptionsScreen" parent="MenuScreenLayer" instance=ExtResource( 15 )]
pause_mode = 2
visible = false

[node name="DeleteScreen" parent="MenuScreenLayer" instance=ExtResource( 3 )]
visible = false

[node name="CreditsScreen" parent="MenuScreenLayer" instance=ExtResource( 4 )]
visible = false

[node name="ChapterScreen" parent="MenuScreenLayer" instance=ExtResource( 9 )]
visible = false

[node name="EndCreditsScreen" parent="MenuScreenLayer" instance=ExtResource( 12 )]
visible = false

[node name="MenuButtonSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SoundEffects"
script = ExtResource( 1 )

[node name="MenuButtonBackSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "SoundEffects"
script = ExtResource( 11 )

[node name="MusicLoopPlayer" type="AudioStreamPlayer" parent="." groups=["musicPlayer"]]
stream = ExtResource( 8 )
autoplay = true
bus = "Music"

[connection signal="button_pressed" from="MenuScreenLayer/MenuScreen" to="MenuButtonSoundPlayer" method="_on_MenuScreen_button_pressed"]
[connection signal="pause" from="MenuScreenLayer/MenuScreen" to="." method="_on_MenuScreen_pause"]
[connection signal="quit_game" from="MenuScreenLayer/MenuScreen" to="." method="_on_MenuScreen_quit_game"]
[connection signal="restart_game" from="MenuScreenLayer/MenuScreen" to="." method="_on_MenuScreen_restart_game"]
[connection signal="restart_level" from="MenuScreenLayer/MenuScreen" to="." method="_on_MenuScreen_restart_level"]
[connection signal="unpause" from="MenuScreenLayer/MenuScreen" to="." method="_on_MenuScreen_unpause"]
[connection signal="back_button_pressed" from="MenuScreenLayer/StartMenuScreen" to="MenuButtonBackSoundPlayer" method="_on_StartMenuScreen_back_button_pressed"]
[connection signal="button_pressed" from="MenuScreenLayer/StartMenuScreen" to="MenuButtonSoundPlayer" method="_on_StartMenuScreen_button_pressed"]
[connection signal="quit_game" from="MenuScreenLayer/StartMenuScreen" to="." method="_on_StartMenuScreen_quit_game"]
[connection signal="start_game" from="MenuScreenLayer/StartMenuScreen" to="." method="_on_StartMenuScreen_start_game"]
[connection signal="back_button_pressed" from="MenuScreenLayer/OptionsScreen" to="MenuButtonBackSoundPlayer" method="_on_OptionsScreen_back_button_pressed"]
[connection signal="button_pressed" from="MenuScreenLayer/OptionsScreen" to="MenuButtonSoundPlayer" method="_on_OptionsScreen_button_pressed"]
[connection signal="screenClosed" from="MenuScreenLayer/OptionsScreen" to="MenuScreenLayer/MenuScreen" method="_on_OptionsScreen_screenClosed"]
[connection signal="screenClosed" from="MenuScreenLayer/OptionsScreen" to="MenuScreenLayer/StartMenuScreen" method="_on_OptionsScreen_screenClosed"]
[connection signal="back_button_pressed" from="MenuScreenLayer/DeleteScreen" to="MenuButtonBackSoundPlayer" method="_on_DeleteScreen_back_button_pressed"]
[connection signal="button_pressed" from="MenuScreenLayer/DeleteScreen" to="MenuButtonSoundPlayer" method="_on_DeleteScreen_button_pressed"]
[connection signal="deleteSaveData" from="MenuScreenLayer/DeleteScreen" to="." method="_on_DeleteScreen_deleteSaveData"]
[connection signal="screenClosed" from="MenuScreenLayer/DeleteScreen" to="MenuScreenLayer/StartMenuScreen" method="_on_DeleteScreen_screenClosed"]
[connection signal="back_button_pressed" from="MenuScreenLayer/CreditsScreen" to="MenuButtonBackSoundPlayer" method="_on_CreditsScreen_back_button_pressed"]
[connection signal="screenClosed" from="MenuScreenLayer/CreditsScreen" to="MenuScreenLayer/StartMenuScreen" method="_on_CreditsScreen_screenClosed"]
[connection signal="back_button_pressed" from="MenuScreenLayer/ChapterScreen" to="MenuButtonBackSoundPlayer" method="_on_ChapterScreen_back_button_pressed"]
[connection signal="button_pressed" from="MenuScreenLayer/ChapterScreen" to="MenuButtonSoundPlayer" method="_on_ChapterScreen_button_pressed"]
[connection signal="screenClosed" from="MenuScreenLayer/ChapterScreen" to="MenuScreenLayer/StartMenuScreen" method="_on_ChapterScreen_screenClosed"]
[connection signal="selectChapter" from="MenuScreenLayer/ChapterScreen" to="." method="_on_ChapterScreen_selectChapter"]
