extends AudioStreamPlayer

func _on_MenuScreen_back_button_pressed():
	play()


func _on_StartMenuScreen_back_button_pressed():
	play()


func _on_OptionsScreen_button_pressed():
	play()


func _on_OptionsScreen_back_button_pressed():
	play()


func _on_DeleteScreen_back_button_pressed():
	play()


func _on_CreditsScreen_back_button_pressed():
	play()


func _on_ChapterScreen_back_button_pressed():
	play()
