extends AudioStreamPlayer

func _on_MenuScreen_button_pressed():
	play()

func _on_StartMenuScreen_button_pressed():
	play()

func _on_OptionsScreen_button_pressed():
	play()

func _on_CreditsScreen_button_pressed():
	play()

func _on_DeleteScreen_button_pressed():
	play()

func _on_CampaignScreen_button_pressed():
	play()
